--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:authorities="com.example.muhammadafifaf.iakdayone"
+            android:name=".data.offlineDB.MovieContentProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
