--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.muhammadafifaf.iakdayone">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -19,9 +20,11 @@
         </activity>
 
         <provider
-            android:authorities="com.example.muhammadafifaf.iakdayone"
             android:name=".data.offlineDB.MovieContentProvider"
-            android:exported="false"/>
+            android:authorities="com.example.muhammadafifaf.iakdayone"
+            android:exported="false" />
+
+        <activity android:name=".detail.DetailActivity"></activity>
     </application>
 
 </manifest>
